syntax = "proto3";

import "distributedsyncsession.proto";

// Internal message representing an rpc call
message RpcCall {
  string method = 1;
  bytes data = 2;
}

service RpcService {
  rpc Capabilities (CapabilitiesRequest) returns (CapabilitiesResponse);
  rpc RegisterSession (RegisterSessionRequest) returns (RegisterSessionResponse);
  rpc ClearSession (ClearSessionRequest) returns (ClearSessionResponse);
  rpc SyncStatus (SyncStatusRequest) returns (SyncStatusResponse);
  rpc SyncState (SyncStateRequest) returns (SyncStateResponse);
  rpc StartSync (StartSyncRequest) returns (StartSyncResponse);
  rpc SyncReveal (SyncRevealRequest) returns (SyncRevealResponse);
  rpc SyncResponse (SyncResponseRequest) returns (SyncResponseResponse);
  rpc SyncFinalize (SyncFinalizeRequest) returns (SyncFinalizeResponse);
}

message CapabilitiesRequest {
}

message CapabilitiesResponse {
  int32 app_version_major = 1;
  int32 app_version_minor = 2;
  int32 app_version_patch = 3;
  repeated int32 supported_protocol_versions = 4;
}

message RegisterSessionRequest {
  string session_id = 1;
}

message RegisterSessionResponse {
  bool existing = 1;
}

message ClearSessionRequest {
  string session_id = 1;
}

message ClearSessionResponse {
  bool existing = 1;
}

enum SyncState {
  NONE = 0;
  STARTED = 1;
  REVEALED = 2;
  RESPONDED = 3;
  FINALIZED = 4;
}

message SyncStatusRequest {
  string session_id = 1;
}

message SyncStatusResponse {
  message SyncStatus {
    string currency_id = 1;
    SyncState state = 2;
  }
  repeated SyncStatus statuses = 1;
}

message SyncStateRequest {
  string session_id = 1;
  int32 currency_id = 2;
}

message SyncStateResponse {
  SyncState status = 1;
}

message StartSyncRequest {
  string session_id = 1;
  int32 currency_id = 2;
  EcdsaInitialCommitment initialCommitment = 3;
}

message StartSyncResponse {
  EcdsaInitialData initialData = 1;
}

message SyncRevealRequest {
  string session_id = 1;
  int32 currency_id = 2;
  EcdsaInitialDecommitment initialDecommitment = 3;
}

message SyncRevealResponse {
  EcdsaChallengeCommitment challengeCommitment = 1;
}

message SyncResponseRequest {
  string session_id = 1;
  int32 currency_id = 2;
  EcdsaResponseCommitment responseCommitment = 3;
}

message SyncResponseResponse {
  EcdsaChallengeDecommitment challengeDecommitment = 1;
}

message SyncFinalizeRequest {
  string session_id = 1;
  int32 currency_id = 2;
  EcdsaResponseDecommitment responseDecommitment = 3;
}

message SyncFinalizeResponse {
}